manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-om-playground-api
  name: redis-om-playground-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-om-playground-api
  template:
    metadata:
      labels:
        app: redis-om-playground-api
    spec:
      containers:
      - image: localhost:5001/redis-om-playground-api:latest
        imagePullPolicy: Always
        name: redis-om-playground-api
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
