manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: redis-om-playground
  name: redis-om-playground
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: redis-om-playground
  sessionAffinity: None
  type: ClusterIP
